--- a/A3/src/main/java/view/FrmCadastroFerramenta.form
+++ b/A3/src/main/java/view/FrmCadastroFerramenta.form
@@ -108,6 +108,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="JTFNome">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JTFNomeActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="JTFMarca">
     </Component>
